--- a/app/src/main/res/layout/create_account_fragment.xml
+++ b/app/src/main/res/layout/create_account_fragment.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp" />
     <EditText
+        android:id="@+id/username_edit_text"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
