--- a/app/src/main/res/layout/workout_fragment.xml
+++ b/app/src/main/res/layout/workout_fragment.xml
@@ -24,7 +24,7 @@
         android:id="@+id/workout_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0 Miles"
+        android:text="0.00 km"
         android:textColor="@color/fantasy_fitness_white"
         android:textSize="48sp"
         android:layout_gravity="center"/>
