--- a/app/src/main/res/layout/game_world_fragment.xml
+++ b/app/src/main/res/layout/game_world_fragment.xml
@@ -5,17 +5,74 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/location_info_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/fantasy_fitness_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
+        android:maxHeight="350dp">
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/location_info_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:text="testText"
+                    android:textSize="25sp" />
+                <TextView
+                    android:id="@+id/location_info_description"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:layout_height="wrap_content"
+                    android:text="This is a lot of text I kind of hope that it wraps around skfa;slfjo;asdkfjal;skdjflasd;kfjs;dalkjfa;sldkfj"
+                    android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/location_info_connected_locations"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:text="testText"
+                    android:textSize="16sp" />
+                <Button
+                    android:id="@+id/close_location_info_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="@string/close"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </LinearLayout>
+        </ScrollView>
+
+
+
+    </androidx.cardview.widget.CardView>
+
     <ScrollView
-        android:id="@+id/world_map_vertical"
+        android:id="@+id/world_map_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
+        app:layout_constraintRight_toRightOf="parent">
 
         <HorizontalScrollView
-            android:id="@+id/world_map_horizontal"
+            android:id="@+id/world_map_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -29,35 +86,183 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/map_descriptor"
-                    android:src="@drawable/testmap"
+                    android:src="@drawable/worldmap"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
 
                 <Button
-                    android:id="@+id/town1Button"
+                    android:id="@+id/thanadel_village"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="351dp"
-                    android:layout_marginEnd="396dp"
+                    android:layout_marginStart="2220dp"
+                    android:layout_marginTop="1292dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
-                    android:text="town 1"
+                    android:text="Thanadel Village"
                     android:textColor="@color/fantasy_fitness_white"
                     android:textSize="25sp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
-                    android:id="@+id/town2Button"
+                    android:id="@+id/woodlands"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="515dp"
-                    android:layout_marginTop="517dp"
+
+                    android:layout_marginStart="2148dp"
+                    android:layout_marginTop="1592dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
-                    android:text="town 2"
+                    android:text="Woodlands"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/farmlands"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginStart="2296dp"
+                    android:layout_marginTop="1052dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Farmlands"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/Faolyn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginStart="2048dp"
+                    android:layout_marginTop="904dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Faolyn"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/riverlands"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginStart="1852dp"
+                    android:layout_marginTop="1304dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Riverlands"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/bridgeton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginStart="1728dp"
+                    android:layout_marginTop="1592dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Bridgeton"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/hills"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="932dp"
+                    android:layout_marginTop="1364dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Hills"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/mountain_pass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="736dp"
+                    android:layout_marginTop="1968dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Mountain Pass"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/monastary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="1144dp"
+                    android:layout_marginTop="888dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Monastary"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/tower"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="800dp"
+                    android:layout_marginTop="416dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Tower"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/north_port"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="1456dp"
+                    android:layout_marginTop="340dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="North Port"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/valley_of_monsters"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="152dp"
+                    android:layout_marginTop="272dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Valley of Monsters"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/coastlands"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="1680dp"
+                    android:layout_marginTop="600dp"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="Coastlands"
                     android:textColor="@color/fantasy_fitness_white"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -66,5 +271,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </HorizontalScrollView>
     </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
