map working with tests

--- a/app/src/main/res/layout/game_world_fragment.xml
+++ b/app/src/main/res/layout/game_world_fragment.xml
@@ -89,20 +89,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/map_descriptor"
-                    android:src="@drawable/worldmap"
+                    android:src="@drawable/worldmapsmall"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="1.0" />
 
                 <Button
                     android:id="@+id/thanadel_village"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="2220dp"
-                    android:layout_marginTop="1292dp"
+                    android:layout_marginStart="1068dp"
+                    android:layout_marginTop="692dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Thanadel Village"
                     android:textColor="@color/fantasy_fitness_white"
@@ -115,8 +115,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginStart="2148dp"
-                    android:layout_marginTop="1592dp"
+                    android:layout_marginStart="1072dp"
+                    android:layout_marginTop="848dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Woodlands"
                     android:textColor="@color/fantasy_fitness_white"
@@ -129,8 +129,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginStart="2296dp"
-                    android:layout_marginTop="1052dp"
+                    android:layout_marginStart="1108dp"
+                    android:layout_marginTop="504dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Farmlands"
                     android:textColor="@color/fantasy_fitness_white"
@@ -139,12 +139,12 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
-                    android:id="@+id/Faolyn"
+                    android:id="@+id/faolyn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginStart="2048dp"
-                    android:layout_marginTop="904dp"
+                    android:layout_marginStart="984dp"
+                    android:layout_marginTop="440dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Faolyn"
                     android:textColor="@color/fantasy_fitness_white"
@@ -157,8 +157,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginStart="1852dp"
-                    android:layout_marginTop="1304dp"
+                    android:layout_marginStart="848dp"
+                    android:layout_marginTop="608dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Riverlands"
                     android:textColor="@color/fantasy_fitness_white"
@@ -171,8 +171,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:layout_marginStart="1728dp"
-                    android:layout_marginTop="1592dp"
+                    android:layout_marginStart="824dp"
+                    android:layout_marginTop="776dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Bridgeton"
                     android:textColor="@color/fantasy_fitness_white"
@@ -184,8 +184,8 @@
                     android:id="@+id/hills"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="932dp"
-                    android:layout_marginTop="1364dp"
+                    android:layout_marginStart="452dp"
+                    android:layout_marginTop="664dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Hills"
                     android:textColor="@color/fantasy_fitness_white"
@@ -197,8 +197,8 @@
                     android:id="@+id/mountain_pass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="736dp"
-                    android:layout_marginTop="1968dp"
+                    android:layout_marginStart="252dp"
+                    android:layout_marginTop="964dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Mountain Pass"
                     android:textColor="@color/fantasy_fitness_white"
@@ -210,8 +210,8 @@
                     android:id="@+id/monastary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="1144dp"
-                    android:layout_marginTop="888dp"
+                    android:layout_marginStart="544dp"
+                    android:layout_marginTop="356dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Monastary"
                     android:textColor="@color/fantasy_fitness_white"
@@ -223,8 +223,8 @@
                     android:id="@+id/tower"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="800dp"
-                    android:layout_marginTop="416dp"
+                    android:layout_marginStart="292dp"
+                    android:layout_marginTop="156dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Tower"
                     android:textColor="@color/fantasy_fitness_white"
@@ -233,13 +233,13 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
-                    android:id="@+id/north_port"
+                    android:id="@+id/arduwyn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="1456dp"
-                    android:layout_marginTop="340dp"
+                    android:layout_marginStart="712dp"
+                    android:layout_marginTop="168dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
-                    android:text="North Port"
+                    android:text="Arduwyn"
                     android:textColor="@color/fantasy_fitness_white"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -249,8 +249,8 @@
                     android:id="@+id/valley_of_monsters"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="152dp"
-                    android:layout_marginTop="272dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="96dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
                     android:text="Valley of Monsters"
                     android:textColor="@color/fantasy_fitness_white"
@@ -259,13 +259,13 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
-                    android:id="@+id/coastlands"
+                    android:id="@+id/north_road"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="1680dp"
-                    android:layout_marginTop="600dp"
+                    android:layout_marginStart="812dp"
+                    android:layout_marginTop="304dp"
                     android:backgroundTint="@color/fantasy_fitness_green"
-                    android:text="Coastlands"
+                    android:text="North Road"
                     android:textColor="@color/fantasy_fitness_white"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
