--- a/app/src/main/res/layout/game_world_fragment.xml
+++ b/app/src/main/res/layout/game_world_fragment.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:maxHeight="350dp">
 
         <ScrollView
@@ -50,6 +50,8 @@
                     android:textSize="16sp" />
                 <Button
                     android:id="@+id/travel_button"
+                    android:stateListAnimator="@null"
+                    android:elevation="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -61,6 +63,8 @@
                     app:layout_constraintTop_toTopOf="parent" />
                 <Button
                     android:id="@+id/close_location_info_button"
+                    android:stateListAnimator="@null"
+                    android:elevation="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
