--- a/app/src/main/res/layout/workout_records_fragment.xml
+++ b/app/src/main/res/layout/workout_records_fragment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fantasy_fitness_gray"
@@ -7,21 +9,33 @@
 
     <TextView
         android:id="@+id/workout_records_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/workout_records"
-        android:textColor="@color/fantasy_fitness_white"
-        android:textSize="50sp"
-        android:layout_gravity="center"/>
-    <View
         android:layout_width="match_parent"
-        android:layout_height="25dp" />
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:text="@string/workout_records"
+        android:autoSizeTextType="uniform"
+        android:textColor="@color/fantasy_fitness_white"
+        app:layout_constraintEnd_toStartOf="@+id/view"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/view"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/workout_records_title"
+        tools:layout_editor_absoluteX="0dp" />
+
     <TextView
         android:id="@+id/workout_records_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
         android:textColor="@color/fantasy_fitness_white"
         android:textSize="24sp"
-        android:layout_gravity="start"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
