--- a/app/src/main/res/layout/user_home_fragment.xml
+++ b/app/src/main/res/layout/user_home_fragment.xml
@@ -43,7 +43,7 @@
         app:layout_constraintVertical_bias="0.5">
 
         <ScrollView
-            android:id="@+id/location_info_scroll"
+            android:id="@+id/nothing_found_scroll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp">
@@ -64,6 +64,89 @@
 
                 <Button
                     android:id="@+id/nothing_found_dismiss_button"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="@string/dismiss"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="15sp" />
+            </LinearLayout>
+        </ScrollView>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/dialog_card_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:backgroundTint="@color/fantasy_fitness_gray"
+        android:maxHeight="350dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5">
+
+        <ScrollView
+            android:id="@+id/dialog_scroll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/dialog_flavor_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="fillertext"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="15sp" />
+
+                <Button
+                    android:id="@+id/dialog_option_1_button"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="@string/dismiss"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="15sp" />
+                <Button
+                    android:id="@+id/dialog_option_2_button"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="@string/dismiss"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="15sp" />
+                <Button
+                    android:id="@+id/dialog_option_3_button"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="@string/dismiss"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="15sp" />
+                <Button
+                    android:id="@+id/dialog_option_4_button"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/fantasy_fitness_green"
+                    android:text="@string/dismiss"
+                    android:textColor="@color/fantasy_fitness_white"
+                    android:textSize="15sp" />
+                <Button
+                    android:id="@+id/dialog_exit_button"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
