--- a/app/src/main/res/layout/combat_fragment.xml
+++ b/app/src/main/res/layout/combat_fragment.xml
@@ -1,6 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/fantasy_fitness_gray">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/enemyHand"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/fantasy_fitness_white"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@+id/enemyBackLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="85dp"
+        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/enemyBackLine"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="21dp"
+        android:background="@color/fantasy_fitness_white"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@+id/enemyFrontLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="85dp"
+        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enemyHand" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/enemyFrontLine"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/fantasy_fitness_white"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHeight_max="85dp"
+        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/enemyBackLine" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playerFrontLine"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/fantasy_fitness_white"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@+id/playerBackLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="85dp"
+        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playerBackLine"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/fantasy_fitness_white"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="85dp"
+        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerFrontLine" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playerHand"
+        android:layout_width="0dp"
+        android:layout_height="121dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/fantasy_fitness_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerBackLine"
+        app:layout_constraintVertical_bias="0.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
