--- a/app/src/main/res/layout/combat_fragment.xml
+++ b/app/src/main/res/layout/combat_fragment.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toTopOf="@+id/enemyBackLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_max="85dp"
-        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHeight_min="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +35,7 @@
         app:layout_constraintBottom_toTopOf="@+id/enemyFrontLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_max="85dp"
-        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHeight_min="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enemyHand" />
 
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintHeight_max="85dp"
-        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHeight_min="60dp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/enemyBackLine" />
@@ -60,15 +60,15 @@
         android:id="@+id/playerFrontLine"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="24dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@+id/playerBackLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_max="85dp"
-        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHeight_min="60dp"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -76,14 +76,14 @@
         android:id="@+id/playerBackLine"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constrainedHeight="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_max="85dp"
-        app:layout_constraintHeight_min="85dp"
+        app:layout_constraintHeight_min="60dp"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playerFrontLine" />
@@ -91,18 +91,33 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerHand"
         android:layout_width="0dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="60dp"
         android:background="@color/fantasy_fitness_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_min="75dp"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playerBackLine"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/end_turn_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/fantasy_fitness_green"
+        android:text="@string/end_turn"
+        app:layout_constraintBottom_toTopOf="@+id/playerFrontLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.934"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enemyFrontLine" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
