--- a/app/src/main/res/layout/combat_fragment.xml
+++ b/app/src/main/res/layout/combat_fragment.xml
@@ -193,7 +193,7 @@
         android:layout_marginTop="13dp"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/fantasy_fitness_green"
-        android:text="@string/end_turn"
+        android:text="@string/ready"
         app:layout_constraintBottom_toTopOf="@+id/playerFrontLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.934"
